<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
android:layout_height="wrap_content"
android:elevation="6dp"
app:cardCornerRadius="7dp"
app:cardElevation="6dp">


<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingVertical="15dp"
    android:background="@color/white"
    android:paddingHorizontal="20dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/alertTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/demo_string"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/alertSubTitle"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/demo_string"
        android:textSize="18sp"
        android:paddingHorizontal="20dp"
        android:textAlignment="center"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/alertIcon"
        android:layout_marginVertical="10dp"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_warning"
        android:tint="#FF9800"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/alertMsg"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/demo_string"
        android:textSize="18sp"
        android:paddingHorizontal="20dp"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:text="@string/cancel"
            android:layout_marginEnd="15dp"
            style="@style/Secondary_btn_style"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDelete"
            android:text="@string/delete"
            style="@style/Primary_btn_style" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>