<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".HomeFragments.StatisticsFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/overall_statistics"
                android:textColor="@color/primary_dark"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white">

                <HorizontalScrollView
                    android:id="@+id/horizontalView"
                    android:layout_height="wrap_content"
                    android:scrollbars="horizontal|vertical"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="5dip">

                    <TableLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:id="@+id/tlGridTable" >

                        <!--  Row Header                   -->
                        <TableRow
                            android:background="@color/primary_dark">
                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/task_title"
                                style="@style/Table_header"/>

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/total_days"
                                style="@style/Table_header"/>



                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/success"
                                style="@style/Table_header"/>

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/failure"
                                style="@style/Table_header"/>


                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/max_streak"
                                style="@style/Table_header"/>

                        </TableRow>

                        <!-- other Rows                    -->

                    </TableLayout>
                </HorizontalScrollView>

<!--                <ScrollView-->
<!--                    android:id="@+id/layout"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:scrollbars="horizontal|vertical"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_marginTop="5dp"-->
<!--                    android:scrollbarStyle="outsideInset"-->
<!--                    android:fillViewport="true">-->

<!--                    <HorizontalScrollView-->
<!--                        android:id="@+id/horizontalView"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:scrollbars="horizontal|vertical"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_marginTop="5dip">-->

<!--                        <TableLayout-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="match_parent"-->
<!--                            android:background="@color/white"-->
<!--                            android:id="@+id/tlGridTable" >-->

<!--                            &lt;!&ndash;  Row Header                   &ndash;&gt;-->
<!--                            <TableRow-->
<!--                                android:background="@color/primary_dark">-->
<!--                                <androidx.appcompat.widget.AppCompatTextView-->
<!--                                    android:layout_width="300dp"-->
<!--                                    android:layout_height="wrap_content"-->
<!--                                    android:text="Task Title"-->
<!--                                    style="@style/Table_header"/>-->

<!--                                <androidx.appcompat.widget.AppCompatTextView-->
<!--                                    android:layout_width="wrap_content"-->
<!--                                    android:layout_height="wrap_content"-->
<!--                                    android:text="Total Days"-->
<!--                                    style="@style/Table_header"/>-->



<!--                                <androidx.appcompat.widget.AppCompatTextView-->
<!--                                    android:layout_width="wrap_content"-->
<!--                                    android:layout_height="wrap_content"-->
<!--                                    android:text="Success"-->
<!--                                    style="@style/Table_header"/>-->

<!--                                <androidx.appcompat.widget.AppCompatTextView-->
<!--                                    android:layout_width="wrap_content"-->
<!--                                    android:layout_height="wrap_content"-->
<!--                                    android:text="Failure"-->
<!--                                    style="@style/Table_header"/>-->


<!--                                <androidx.appcompat.widget.AppCompatTextView-->
<!--                                    android:layout_width="wrap_content"-->
<!--                                    android:layout_height="wrap_content"-->
<!--                                    android:text="Max Streak"-->
<!--                                    style="@style/Table_header"/>-->

<!--                            </TableRow>-->

<!--                            &lt;!&ndash; other Rows                    &ndash;&gt;-->

<!--                        </TableLayout>-->
<!--                    </HorizontalScrollView>-->
<!--                </ScrollView>-->

            </androidx.appcompat.widget.LinearLayoutCompat>



            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/overall_progress"
                android:layout_marginTop="20dp"
                android:textColor="@color/primary_dark"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="10dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <!-- longest streak -->
                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardUseCompatPadding="true"
                        app:cardElevation="6dp"
                        android:backgroundTint="@color/white"
                        app:cardCornerRadius="7dp">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingVertical="10dp"
                            android:paddingHorizontal="20dp"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/longest_streak"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                android:textColor="@color/primary_lite_bg"/>

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/longestStreak"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/demo_string"
                                android:textColor="@color/primary_lite_bg"
                                android:textSize="17sp"
                                android:layout_marginVertical="10dp"/>


                        </androidx.appcompat.widget.LinearLayoutCompat>

                    </com.google.android.material.card.MaterialCardView>

                    <!-- shortest streak -->
                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardElevation="6dp"
                        android:backgroundTint="@color/white"
                        app:cardUseCompatPadding="true"
                        app:cardCornerRadius="7dp">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingVertical="10dp"
                            android:paddingHorizontal="20dp"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/shortest_streak"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                android:textColor="@color/primary_lite_bg"/>

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/shortestStreak"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/demo_string"
                                android:textSize="17sp"
                                android:textColor="@color/primary_lite_bg"
                                android:layout_marginVertical="10dp"/>


                        </androidx.appcompat.widget.LinearLayoutCompat>

                    </com.google.android.material.card.MaterialCardView>

                    <!-- success rate -->
                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardElevation="6dp"
                        android:backgroundTint="@color/white"
                        app:cardUseCompatPadding="true"
                        app:cardCornerRadius="7dp">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingVertical="10dp"
                            android:paddingHorizontal="20dp"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/success_rate"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                android:textColor="@color/primary_lite_bg"/>

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/successRate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/demo_string"
                                android:textSize="17sp"
                                android:textColor="@color/primary_lite_bg"
                                android:layout_marginVertical="10dp"
                                tools:ignore="HardcodedText" />


                        </androidx.appcompat.widget.LinearLayoutCompat>

                    </com.google.android.material.card.MaterialCardView>

                    <!-- failure rate -->
                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardUseCompatPadding="true"
                        android:backgroundTint="@color/white"
                        app:cardElevation="6dp"
                        app:cardCornerRadius="7dp">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingVertical="10dp"
                            android:paddingHorizontal="20dp"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/failure_rate"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                android:textColor="@color/primary_lite_bg"/>

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/failureRate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/demo_string"
                                android:textSize="17sp"
                                android:textColor="@color/primary_lite_bg"
                                android:layout_marginVertical="10dp"/>


                        </androidx.appcompat.widget.LinearLayoutCompat>

                    </com.google.android.material.card.MaterialCardView>




                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </ScrollView>



</androidx.appcompat.widget.LinearLayoutCompat>